<resources>
    <string name="app_name">GeofencingWithRealmApplication</string>

    <!--activities-->
    <string name="activity_main_toolbar_title">@string/app_name</string>

    <string name="activity_main_toolbar_clear_log_text">Чистка логов</string>

    <string name="activity_main_track_location_on">Слежка включена</string>
    <string name="activity_main_track_location_off">Слежка отключена</string>
    <string name="activity_main_track_location_empty_regions_list">Список зон пуст</string>

    <string name="activity_main_item_event_label">Событие: </string>
    <string name="activity_main_item_event_enter">ENTER</string>
    <string name="activity_main_item_event_exit">EXIT</string>
    <string name="activity_main_item_region_label">Геозона: </string>
    <string name="activity_main_item_registered_regions_label">Зарегистрированы: </string>

    <string name="activity_edit_points_toolbar_title">Редактирование зон</string>
    <string name="activity_edit_points_regions_list_is_empty">Список зон пуст</string>

    <string name="region_position_text">Положение: </string>
    <string name="region_radius_text">Радиус: </string>

    <!--dialogs-->
    <string name="region_dialog_name">Название</string>
    <string name="region_dialog_latitude">Широта</string>
    <string name="region_dialog_longitude">Долгота</string>
    <string name="region_dialog_radius">Радиус (в метрах)</string>
    <string name="region_dialog_error_message_text">Введите все поля</string>

    <string name="add_region_dialog_title">Добавление зоны</string>
    <string name="add_region_dialog_positive_button_text">Добавить</string>
    <string name="add_region_dialog_negative_button_text">Отмена</string>

    <string name="edit_region_dialog_title">Редактирование зоны</string>
    <string name="edit_region_dialog_positive_button_text">Изменить</string>
    <string name="edit_region_dialog_negative_button_text">Отмена</string>

    <string name="remove_region_dialog_title">Удалить зону?</string>
    <string name="remove_region_dialog_positive_button_text">Удалить</string>
    <string name="remove_region_dialog_negative_button_text">Отмена</string>

    <string name="clear_log_dialog_title">Очистить лог?</string>
    <string name="clear_log_dialog_positive_button_text">Да</string>
    <string name="clear_log_dialog_negative_button_text">Нет</string>

</resources>
