<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-4dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginStart="-4dp"
            android:ellipsize="end"
            android:gravity="start"
            android:hint="@string/region_dialog_name"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="18sp"
            android:theme="@style/EditTextStyle" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/latitudeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/region_dialog_latitude"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textSize="18sp"
                android:theme="@style/EditTextStyle" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/longitudeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginStart="-4dp"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/region_dialog_longitude"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textSize="18sp"
                android:theme="@style/EditTextStyle" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/radiusView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-4dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginStart="-4dp"
            android:ellipsize="end"
            android:gravity="start"
            android:hint="@string/region_dialog_radius"
            android:inputType="number"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textSize="18sp"
            android:theme="@style/EditTextStyle" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>